packages/forge-dsl/fixtures/errors/e19-invalid-char.fable
// expect: FORGE001
VAR x = 1 ; 2

-> go
=== go ===
{x}
-> END
